--- a/src/App.css
+++ b/src/App.css
@@ -15,5 +15,9 @@ body{
 
 .lists{
     /* background-color: green; */
-    margin-top: -350px;
+    margin-top: -200px;
 }
+
+/* .row-row{
+    
+} */
