--- a/src/components/MovieRow.css
+++ b/src/components/MovieRow.css
@@ -29,6 +29,14 @@
     transform: scale(0.95);
     cursor: pointer;
     text-decoration: none;
+
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
 }
 
 .movieRow--item:hover{
